@@ -28,6 +28,7 @@ INCLUDE_DIRECTORIES(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})
 AUX_SOURCE_DIRECTORY(. TEST_FILES)
 AUX_SOURCE_DIRECTORY(MATLAB TEST_FILES)
 AUX_SOURCE_DIRECTORY(classes TEST_FILES)
+AUX_SOURCE_DIRECTORY(classes/circuits TEST_FILES)
 SET(TARGET_NAME "qpp_testing")
 ADD_EXECUTABLE(${TARGET_NAME} main.cpp)
 IF (NOT ${CMAKE_VERSION} VERSION_LESS "3.13")
