@@ -5,6 +5,8 @@ In progress - pre-release
           measureZ() - new overload that allows multiple targets at once
     - API change qpp::QCircuit::get_gate_depth() to qpp::QCircuit::get_depth(),
       so now measurements are taken into account when computing depths
+    - Added "classes/circuits/layouts.h" header file for dealing with different
+      physical qudit layouts
 
 Version 1.3 - 25 July 2019
     - Minimum required CMake version is now 3.2
